@@ -170,9 +170,9 @@ var CloudCmd, CloudFunc, ace;
             /* если клавиши можно обрабатывать */
             if( lBinded ){
                 /* if f4 or f3 pressed */
-                var lF3 = cloudcmd.KEY.F3;
-                var lF4 = cloudcmd.KEY.F4;
-                var lShow = Util.bind(lThis.show, lThis);
+                var lF3 = Key.F3,
+                    lF4 = Key.F4,
+                    lShow = Util.bind(lThis.show, lThis);
                                 
                 if(!pEvent.shiftKey){
                     if(pEvent.keyCode === lF4)
