@@ -191,7 +191,7 @@ var CloudCmd, Util, DOM, CodeMirror;
             var lIsBind = Key.isBind();
             
             if (lIsBind) {
-                var lF4     = CloudCmd.KEY.F4,
+                var lF4     = Key.F4,
                     lKey    = pEvent.keyCode;
                                 
                 if(lKey === lF4)
