@@ -2,7 +2,7 @@ var CloudCmd, Util, DOM;
 (function(CloudCmd, Util, DOM){
     'use strict';
     
-    CloudCmd.KEY = {
+    var KEY = {
         TAB         : 9,
         ENTER       : 13,
         ESC         : 27,
@@ -43,10 +43,12 @@ var CloudCmd, Util, DOM;
         TRA         : 192 /* Typewritten Reverse Apostrophe (`) */
     };
     
+    KeyProto.prototype = KEY;
     CloudCmd.Key = new KeyProto();
     
     function KeyProto(){
-        var Binded,
+        var Key = this,
+            Binded,
             lTabPanel   = {
                 left        : 0,
                 right       : 0
@@ -69,7 +71,6 @@ var CloudCmd, Util, DOM;
         function listener(pEvent){
             /* получаем выдленный файл*/
             var i, n, lCurrent  = DOM.getCurrentFile(),
-                KEY             = CloudCmd.KEY,
                 lKeyCode        = pEvent.keyCode,
                 lShift          = pEvent.shiftKey,
                 lAlt            = pEvent.altKey,
@@ -77,7 +78,7 @@ var CloudCmd, Util, DOM;
             /* если клавиши можно обрабатывать*/
             if(Binded){
                 switch(lKeyCode){
-                    case KEY.TAB:
+                    case Key.TAB:
                         /* changing parent panel of curent-file */
                         var lPanel = DOM.getPanel(),
                             lId = lPanel.id;
@@ -98,12 +99,12 @@ var CloudCmd, Util, DOM;
                         DOM.preventDefault(pEvent);//запрет на дальнейшее действие
                         break;
                     
-                    case KEY.INSERT:
+                    case Key.INSERT:
                         DOM.setSelectedFile( lCurrent );
                         DOM.setCurrentFile( lCurrent.nextSibling );
                         break;
                     
-                    case KEY.DELETE:
+                    case Key.DELETE:
                         if(lShift){
                             var lUrl = DOM.getCurrentPath(lCurrent);
                             
@@ -118,60 +119,60 @@ var CloudCmd, Util, DOM;
                             DOM.promptDeleteSelected(lCurrent);
                         break;
                     
-                    case KEY.F1:
+                    case Key.F1:
                         DOM.preventDefault(pEvent);
                         break;
                     
-                    case KEY.F2:
+                    case Key.F2:
                         DOM.renameCurrent(lCurrent);
                         break;
                         
-                    case KEY.F3:
+                    case Key.F3:
                         Util.exec(CloudCmd.Viewer);
                         DOM.preventDefault(pEvent);
                         break;
                     
-                    case KEY.F4:
+                    case Key.F4:
                         DOM.Images.showLoad();
                         Util.exec(CloudCmd.Editor);
                         DOM.preventDefault(pEvent);
                         break;
                     
-                    case KEY.F5:
+                    case Key.F5:
                         DOM.copyCurrent(lCurrent);
                         DOM.preventDefault(pEvent);
                         break;
                     
-                    case KEY.F6:
+                    case Key.F6:
                         DOM.moveCurrent(lCurrent);
                         DOM.preventDefault(pEvent);
                         break;
                     
-                    case KEY.F7:
+                    case Key.F7:
                         DOM.promptNewDir();
                         break;
                     
-                    case KEY.F8:
+                    case Key.F8:
                         DOM.promptDeleteSelected(lCurrent);
                         break;
                     
-                    case KEY.F:
+                    case Key.F:
                         DOM.promptDeleteCurrent(lCurrent);
                         break;
                     
-                    case KEY.F10:
+                    case Key.F10:
                         if(lShift){
                             Util.exec(CloudCmd.Menu);
                             DOM.preventDefault(pEvent);
                         }
                         break;
                     
-                    case KEY.TRA:
+                    case Key.TRA:
                         DOM.Images.showLoad({top: true});
                         Util.exec(CloudCmd.Terminal);
                         break;
                         
-                    case KEY.SPACE:
+                    case Key.SPACE:
                         var lSelected   = DOM.isSelected(lCurrent),
                             lDir        = DOM.isCurrentIsDir(lCurrent),
                             lName       = DOM.getCurrentName(lCurrent);
@@ -192,7 +193,7 @@ var CloudCmd, Util, DOM;
                     /* навигация по таблице файлов  *
                      * если нажали клавишу вверх    *
                      * выделяем предыдущую строку   */
-                    case KEY.UP:
+                    case Key.UP:
                         if(lShift)
                              DOM.setSelectedFile(lCurrent);
                         
@@ -202,7 +203,7 @@ var CloudCmd, Util, DOM;
                     
                     /* если нажали клавишу в низ    *
                      * выделяем следующую строку    */
-                    case KEY.DOWN:
+                    case Key.DOWN:
                         if(lShift)
                              DOM.setSelectedFile(lCurrent);
                         
@@ -213,21 +214,21 @@ var CloudCmd, Util, DOM;
                     /* если нажали клавишу Home     *
                      * переходим к самому верхнему  *
                      * элементу                     */
-                    case KEY.HOME:
+                    case Key.HOME:
                         DOM.setCurrentFile( lCurrent.parentElement.firstChild );
                         DOM.preventDefault(pEvent);
                         break;
                     
                     /* если нажали клавишу End
                      * выделяем последний элемент   */
-                    case KEY.END:
+                    case Key.END:
                         DOM.setCurrentFile( lCurrent.parentElement.lastElementChild );
                         DOM.preventDefault( pEvent );
                         break;
                     
                     /* если нажали клавишу page down
                      * проматываем экран            */
-                    case KEY.PAGE_DOWN:
+                    case Key.PAGE_DOWN:
                         DOM.scrollByPages( DOM.getPanel(), 1 );
                         
                         for(i=0; i<30; i++){
@@ -240,7 +241,7 @@ var CloudCmd, Util, DOM;
                         break;
                     
                     /* если нажали клавишу page up проматываем экран */
-                    case KEY.PAGE_UP:
+                    case Key.PAGE_UP:
                         DOM.scrollByPages( DOM.getPanel(), -1 );
                         
                         var lC          = lCurrent,
@@ -264,12 +265,12 @@ var CloudCmd, Util, DOM;
                         break;
                         
                     /* открываем папку*/
-                    case KEY.ENTER:
+                    case Key.ENTER:
                         if( DOM.isCurrentIsDir() )
                             Util.exec( CloudCmd.loadDir() );
                         break;
                     
-                    case KEY.A:
+                    case Key.A:
                         if(pEvent.ctrlKey){
                             var lParent = lCurrent.parentElement,
                                 lNodes = lParent.childNodes;
@@ -288,7 +289,7 @@ var CloudCmd, Util, DOM;
                      * при этом данные берём всегда с
                      * сервера, а не из кэша
                      * (обновляем кэш)*/
-                    case KEY.R:
+                    case Key.R:
                         if(lCtrl){
                             Util.log('<ctrl>+r pressed\n' +
                                     'reloading page...\n' +
@@ -300,7 +301,7 @@ var CloudCmd, Util, DOM;
                     break;
                     
                     /* чистим кэш */
-                    case KEY.D:
+                    case Key.D:
                         if(lCtrl){
                             Util.log('<ctrl>+d pressed\n'  +
                                 'clearing cache...\n' +
@@ -313,7 +314,7 @@ var CloudCmd, Util, DOM;
                 
                     /* убираем все обработчики
                      * нажатий клавиш */
-                    case KEY.Q:
+                    case Key.Q:
                         if(lAlt){
                             Util.log('<alt>+q pressed\n'                         +
                                         '<ctrl>+r reload key-handerl - removed'     +
@@ -331,7 +332,7 @@ var CloudCmd, Util, DOM;
             /* устанавливаем все обработчики
              * нажатий клавиш
              */             
-            else if(lKeyCode === KEY.S && lAlt){
+            else if(lKeyCode === Key.S && lAlt){
                 /* обрабатываем нажатия на клавиши*/
                 Binded = true;
                 Util.log('<alt>+s pressed\n'                         +
@@ -340,7 +341,7 @@ var CloudCmd, Util, DOM;
                             'press <alt>+q to remove them');
                 DOM.preventDefault(pEvent);
             }
-        };
+        }
     }
 
 })(CloudCmd, Util, DOM);
