@@ -294,9 +294,8 @@ var CloudCmd, Util, DOM, CloudFunc, $;
         DOM.Events.addKey( lListener );
                 
         function lListener(pEvent){
-            var lKEY        = CloudCmd.KEY,
-                lF10        = lKEY.F10,
-                lESC        = lKEY.ESC,
+            var lF10        = Key.F10,
+                lESC        = Key.ESC,
                 lKey        = pEvent.keyCode,
                 lShift      = pEvent.shiftKey,
                 lIsBind     = Key.isBind();
