@@ -112,9 +112,8 @@ var CloudCmd, Util, DOM, $;
         
         function lListener(pEvent){
             var lRet        = true,
-                lKEY        = CloudCmd.KEY,
-                lESC        = lKEY.ESC,
-                lTRA        = lKEY.TRA,
+                lESC        = Key.ESC,
+                lTRA        = Key.TRA,
                 lKey        = pEvent.keyCode,
                 lIsBind     = Key.isBind();
             
