@@ -132,9 +132,8 @@ var CloudCmd, Util, DOM, CloudFunc, $;
         }
         
         function lListener(pEvent){
-            var lKEY        = CloudCmd.KEY,
-                lF3         = lKEY.F3,
-                lF1         = lKEY.F1,
+            var lF3         = Key.F3,
+                lF1         = Key.F1,
                 lIsBind     = Key.isBind(),
                 lKey        = pEvent.keyCode;
             
