@@ -42,6 +42,8 @@ dispatch
 * Functions maked private: ajaxload, changeLinks, createFileTable,
 getJSONfromFileTable.
 
+* Moved CloudCmd.KEY object data to prototype of CloudCmd.Key.
+
 
 2012.04.22, v0.2.0
 
